tests/trybuild/registry/unexpected_token.stderr
error: no rules expected the token `+`
 --> tests/trybuild/registry/unexpected_token.rs:8:33
  |
8 |     let registry = registry!(A, + B,);
  |                                 ^ no rules expected this token in macro call
